--- a/Formale Sprachen/Formale Sprachen.tex
+++ b/Formale Sprachen/Formale Sprachen.tex
@@ -27,7 +27,7 @@
 \newcommand{\Fach}{Theoretische Informatik}
 \newcommand{\Name}{Robin Feldmann}
 \newcommand{\Tutorium}{}
-\newcommand{\Semester}{SS 21}
+\newcommand{\Semester}{OHM}
 \newcommand{\KlausurLoesung }{SoSe2020} %  <-- UPDATE ME
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
